--- a/chatbots/main.ipynb
+++ b/chatbots/main.ipynb
@@ -10,19 +10,192 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import string"
+   ]
+  },
+  {
+   "source": [
+    "### Definir CORPUS"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"corpus.txt\",\"r\",errors='ignore')\n",
+    "raw = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'En cuarentena no se pude salir de casa.\\n\\ncomo medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.\\n\\nlos tapabocas los puede comprar en la farmacia.\\n\\nPuede comprar alimentos a traves de domicilio.\\n\\nNo se tiene prevista fecha de vacunacion en Colombia.\\n\\nLos medicamentos los puede comprar a domicilio.\\n\\n\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "# raw"
+   ]
+  },
+  {
+   "source": [
+    "### Preporcesamiento del texto con NLTK CORPUS"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw = raw.lower() #convertir en minuscular\n",
+    "sent_tokens = nltk.sent_tokenize(raw) # convertir corpus a una lista de sentencias (tekenizar en sentencias)\n",
+    "word_tokens = nltk.word_tokenize(raw) # convertir corpus a una lista de palabras (tokenizar en palabras)\n",
+    "\n",
+    "lemmer = nltk.stem.WordNetLemmatizer()#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LemTokens(tokens):\n",
+    "    return [lemmer.lemmatize(token) for token in tokens] # Lematizar palabras tokenizadas\n",
+    "\n",
+    "remove_punct_dict = dict((ord(punct),None) for punct in string.punctuation) #remover signos de puntuacion (utilizamos la )\n",
+    "\n",
+    "\n",
+    "def LemNormalize(text):\n",
+    "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
+   ]
+  },
+  {
+   "source": [
+    "### Evaluar Similitud Mensaje Usuario - Corpus"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from nltk.corpus import stopwords  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Determinar la similutud del texto inserdado y el corpus\n",
+    "\n",
+    "def response(user_response):# funcion respuesta (entrada: mensje de usuario)\n",
+    "    chatbot_response = '' #definir la respuesta del chatbot\n",
+    "    sent_tokens.append(user_response)# al listado de sentencias del corpus añadir al final de la lista el mensaje del usuario\n",
+    "    TfidfVec = TfidfVectorizer(tokenizer=LemNormalize,stop_words=stopwords.words('spanish'))# Lematizar y eliminar palbras\n",
+    "    tfidf = TfidfVec.fit_transform(sent_tokens)\n",
+    "\n",
+    "    # 3 Evaluar similitud coseno entre mensaje usuario (tfid[-1]) y el corpus(tfidf)\n",
+    "    vals = cosine_similarity(tfidf[-1],tfidf)\n",
+    "    idx.vals.argsort()[0][-2]\n",
+    "    flat = vals.flatten()\n",
+    "    flat.sort()\n",
+    "    req_tfidf = flat[-2]\n",
+    "\n",
+    "    if(req_tfidf == 0):\n",
+    "        chatbot_response = chatbot_response + \"Lo siento, no te he entendido\"\n",
+    "        return chatbot_response\n",
+    "    \n",
+    "    else:\n",
+    "        chatbot_response = chatbot_response + sent_tokens[idx]\n",
+    "        return chatbot_response"
+   ]
+  },
+  {
+   "source": [
+    "### DEFINICION DE CONINCIDENCIA MANUAL"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SALUDOS_INPUTS = (\"hola\",\"buenas\",\"saludos\",\"que tal\",\"hey\",\"buenos dias\")\n",
+    "SALUDOS_OUTPUTS = [\"hola\",\"hola, que tal?\",\"Hola, Como te puedo ayudar?\",\"hola, encantado de hablar contigo\"]\n",
+    "\n",
+    "def saludos(sentence):\n",
+    "    for word in sentence.split():\n",
+    "        if word.lower in SALUDOS_INPUTS:\n",
+    "            return random.choice(SALUDOS_OUTPUTS)"
+   ]
+  },
+  {
+   "source": [
+    "### GENERACION DE RESPUESTA"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "flag = True\n",
+    "\n",
+    "print(\"AGENTE: MI NOMBRE ES AGENTE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\")\n",
+    "while(flag == True):\n",
+    "    "
+   ]
   }
  ]
 }
