--- a/chatbots/main.ipynb
+++ b/chatbots/main.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'En cuarentena no se pude salir de casa.\\n\\ncomo medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.\\n\\nlos tapabocas los puede comprar en la farmacia.\\n\\nPuede comprar alimentos a traves de domicilio.\\n\\nNo se tiene prevista fecha de vacunacion en Colombia.\\n\\nLos medicamentos los puede comprar a domicilio.\\n\\n\\n'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "source": [
     "# raw"
    ]
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +130,7 @@
     "\n",
     "    # 3 Evaluar similitud coseno entre mensaje usuario (tfid[-1]) y el corpus(tfidf)\n",
     "    vals = cosine_similarity(tfidf[-1],tfidf)\n",
-    "    idx.vals.argsort()[0][-2]\n",
+    "    idx = vals.argsort()[0][-2]\n",
     "    flat = vals.flatten()\n",
     "    flat.sort()\n",
     "    req_tfidf = flat[-2]\n",
@@ -164,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +162,8 @@
     "\n",
     "def saludos(sentence):\n",
     "    for word in sentence.split():\n",
-    "        if word.lower in SALUDOS_INPUTS:\n",
+    "        # print(word.lower() in SALUDOS_INPUTS)\n",
+    "        if word.lower() in SALUDOS_INPUTS:\n",
     "            return random.choice(SALUDOS_OUTPUTS)"
    ]
   },
@@ -186,16 +176,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "AGENTE: MI NOMBRE ES AGENTE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\n",
+      "AGENTE: *los tapabocas los puede comprar en la farmacia.\n",
+      "AGENTE: Nos vemos pronto, !Gracias por su visita¡\n"
+     ]
+    }
+   ],
    "source": [
     "flag = True\n",
     "\n",
     "print(\"AGENTE: MI NOMBRE ES AGENTE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\")\n",
     "while(flag == True):\n",
+    "    user_response = input()\n",
+    "    user_response = user_response.lower() #convertimos a minuscula\n",
+    "\n",
+    "    if(user_response != 'salir'):\n",
+    "        if(user_response == 'gracias' or user_response == 'muchas gracias'): #se podria haber definido otra funcion de coincidencia\n",
+    "            flag = True\n",
+    "            print(\"AGENTE: No hay de que\")\n",
+    "        else:\n",
+    "            if(saludos(user_response) != None): # si la palabra insertada por el usuario es un saludo (coincidencia manuales)\n",
+    "                print(\"AGENTE: \"+saludos(user_response))\n",
+    "            else:#si la palabra insertada no es un saludo --> Corpus\n",
+    "                print(\"AGENTE: \",end =\"*\")\n",
+    "                print(response(user_response),end=\"*\\n\")\n",
+    "                sent_tokens.remove(user_response) # para eliminar del corpus la respues del usuario y volver a evaluar \n",
+    "    else:\n",
+    "        flag = False\n",
+    "        print(\"AGENTE: Nos vemos pronto, !Gracias por su visita¡\")                \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
