Corrigiendo el chatbot :v

--- a/chatbots/testChatBot.ipynb
+++ b/chatbots/testChatBot.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -192,9 +192,11 @@
      "name": "stdout",
      "text": [
       "AGENTE: MI NOMBRE ES AGENTE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\n",
-      "AGENTE: *los motores de búsqueda, como google, utilizan desde hace tiempo los denominados rastreadores web o crawlers, que exploran internet en busca de términos definidos por el usuario.*\n",
-      "AGENTE: *el primer rastreador web se creó ya en 1993, cuando se presentó el primer motor de búsqueda: jumpstation.*\n",
+      "AGENTE: *para garantizar la legalidad del web scraping, hay que tener en consideración lo siguiente:\n",
+      "\n",
+      "aunque el scraping está permitido en muchos casos, puede utilizarse con fines destructivos o incluso ilegales.*\n",
       "AGENTE: *el scrapingno siempre es legal.*\n",
+      "AGENTE: *Lo siento, no te he entendido*\n",
       "AGENTE: Nos vemos pronto, !Gracias por su visita¡\n"
      ]
     }
@@ -207,7 +209,7 @@
     "    user_response = input()\n",
     "    user_response = user_response.lower() #convertimos a minuscula\n",
     "\n",
-    "    if(user_response not in [\"salir\",\"chao\",\"adios\"]):\n",
+    "    if(user_response not in [\"salir\",\"chao\",\"adios\",\"bay\",\"exit\"]):\n",
     "        if(user_response == 'gracias' or user_response == 'muchas gracias'): #se podria haber definido otra funcion de coincidencia\n",
     "            flag = True\n",
     "            print(\"AGENTE: No hay de que\")\n",
@@ -222,6 +224,13 @@
     "        flag = False\n",
     "        print(\"AGENTE: Nos vemos pronto, !Gracias por su visita¡\")    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
