sintesis de voz

--- a/chatbots/main.ipynb
+++ b/chatbots/main.ipynb
@@ -55,9 +55,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'En cuarentena no se pude salir de casa.\\n\\ncomo medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.\\n\\nlos tapabocas los puede comprar en la farmacia.\\n\\nPuede comprar alimentos a traves de domicilio.\\n\\nNo se tiene prevista fecha de vacunacion en Colombia.\\n\\nLos medicamentos los puede comprar a domicilio.\\n\\n\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
-    "# raw"
+    "raw"
    ]
   },
   {
@@ -84,16 +95,98 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'en cuarentena no se pude salir de casa.\\n\\ncomo medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.\\n\\nlos tapabocas los puede comprar en la farmacia.\\n\\npuede comprar alimentos a traves de domicilio.\\n\\nno se tiene prevista fecha de vacunacion en colombia.\\n\\nlos medicamentos los puede comprar a domicilio.\\n\\n\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['en cuarentena no se pude salir de casa.',\n",
+       " 'como medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.',\n",
+       " 'los tapabocas los puede comprar en la farmacia.',\n",
+       " 'puede comprar alimentos a traves de domicilio.',\n",
+       " 'no se tiene prevista fecha de vacunacion en colombia.',\n",
+       " 'los medicamentos los puede comprar a domicilio.']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "sent_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# word_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<WordNetLemmatizer>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# lemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_punct_dict = dict((ord(punct),None) for punct in string.punctuation) #remover signos de puntuacion (utilizamos la )\n",
+    "\n",
     "def LemTokens(tokens):\n",
     "    return [lemmer.lemmatize(token) for token in tokens] # Lematizar palabras tokenizadas\n",
     "\n",
-    "remove_punct_dict = dict((ord(punct),None) for punct in string.punctuation) #remover signos de puntuacion (utilizamos la )\n",
-    "\n",
-    "\n",
     "def LemNormalize(text):\n",
-    "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
+    "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove_punct_dict = dict((ord(punct),word) for punct in string.punctuation for word in word_tokens)"
    ]
   },
   {
@@ -105,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +221,22 @@
     "    TfidfVec = TfidfVectorizer(tokenizer=LemNormalize,stop_words=stopwords.words('spanish'))# Lematizar y eliminar palbras\n",
     "    tfidf = TfidfVec.fit_transform(sent_tokens)\n",
     "\n",
+    "    print(\"a\",tfidf[-1])\n",
+    "    print(\"------------------\")\n",
+    "    print(tfidf)\n",
     "    # 3 Evaluar similitud coseno entre mensaje usuario (tfid[-1]) y el corpus(tfidf)\n",
     "    vals = cosine_similarity(tfidf[-1],tfidf)\n",
+    "   \n",
+    "\n",
     "    idx = vals.argsort()[0][-2]\n",
     "    flat = vals.flatten()\n",
+    "    \n",
     "    flat.sort()\n",
+    "  \n",
     "    req_tfidf = flat[-2]\n",
-    "\n",
+    "    print(\"------------------\")\n",
+    "    print(req_tfidf)\n",
+    "    print(idx)\n",
     "    if(req_tfidf == 0):\n",
     "        chatbot_response = chatbot_response + \"Lo siento, no te he entendido\"\n",
     "        return chatbot_response\n",
@@ -153,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +286,43 @@
      "name": "stdout",
      "text": [
       "AGENTE: MI NOMBRE ES AGENTE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\n",
-      "AGENTE: *los tapabocas los puede comprar en la farmacia.\n",
+      "AGENTE: *a   (0, 3)\t1.0\n",
+      "------------------\n",
+      "  (0, 1)\t0.5\n",
+      "  (0, 17)\t0.5\n",
+      "  (0, 14)\t0.5\n",
+      "  (0, 4)\t0.5\n",
+      "  (1, 19)\t0.35355339059327373\n",
+      "  (1, 22)\t0.35355339059327373\n",
+      "  (1, 9)\t0.35355339059327373\n",
+      "  (1, 8)\t0.35355339059327373\n",
+      "  (1, 18)\t0.35355339059327373\n",
+      "  (1, 16)\t0.35355339059327373\n",
+      "  (1, 12)\t0.35355339059327373\n",
+      "  (1, 11)\t0.35355339059327373\n",
+      "  (2, 6)\t0.6169266931593301\n",
+      "  (2, 3)\t0.3911811902785459\n",
+      "  (2, 15)\t0.44615681259330786\n",
+      "  (2, 20)\t0.5170327167755766\n",
+      "  (3, 5)\t0.4400320599888547\n",
+      "  (3, 21)\t0.5250490246458531\n",
+      "  (3, 0)\t0.5250490246458531\n",
+      "  (3, 3)\t0.33292335166069675\n",
+      "  (3, 15)\t0.37971156360828673\n",
+      "  (4, 2)\t0.5\n",
+      "  (4, 23)\t0.5\n",
+      "  (4, 7)\t0.5\n",
+      "  (4, 13)\t0.5\n",
+      "  (5, 10)\t0.6169266931593301\n",
+      "  (5, 5)\t0.5170327167755766\n",
+      "  (5, 3)\t0.3911811902785459\n",
+      "  (5, 15)\t0.44615681259330786\n",
+      "  (6, 20)\t1.0\n",
+      "  (7, 3)\t1.0\n",
+      "------------------\n",
+      "0.391181190278546\n",
+      "5\n",
+      "los medicamentos los puede comprar a domicilio.*\n",
       "AGENTE: Nos vemos pronto, !Gracias por su visita¡\n"
      ]
     }
@@ -197,7 +335,7 @@
     "    user_response = input()\n",
     "    user_response = user_response.lower() #convertimos a minuscula\n",
     "\n",
-    "    if(user_response != 'salir'):\n",
+    "    if(user_response not in [\"salir\",\"chao\",\"adios\"]):\n",
     "        if(user_response == 'gracias' or user_response == 'muchas gracias'): #se podria haber definido otra funcion de coincidencia\n",
     "            flag = True\n",
     "            print(\"AGENTE: No hay de que\")\n",
@@ -212,6 +350,32 @@
     "        flag = False\n",
     "        print(\"AGENTE: Nos vemos pronto, !Gracias por su visita¡\")                \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['en cuarentena no se pude salir de casa.',\n",
+       " 'como medidas de prevencion, recuerde siempre laverse las manos y utilizar tababocas.',\n",
+       " 'los tapabocas los puede comprar en la farmacia.',\n",
+       " 'puede comprar alimentos a traves de domicilio.',\n",
+       " 'no se tiene prevista fecha de vacunacion en colombia.',\n",
+       " 'los medicamentos los puede comprar a domicilio.',\n",
+       " 'tapabocas']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "sent_tokens"
    ]
   },
   {
