--- a/chatbots/testChatBot.ipynb
+++ b/chatbots/testChatBot.ipynb
@@ -33,6 +33,8 @@
     "import urllib.request\n",
     "import random\n",
     "import string\n",
+    "import pyttsx3\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -40,8 +42,37 @@
    ]
   },
   {
+   "source": [
+    "### Sintesis de Voz"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = pyttsx3.init()\n",
+    "engine.setProperty('rate',150)\n",
+    "engine.setProperty('voice','spanish')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def speak(texto):\n",
+    "    engine.say(texto)\n",
+    "    engine.runAndWait()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'div', 'li', 'html', 'button', 'source', 'h1', 'title', 'time', 'link', 'h2', 'ul', 'i', 'footer', 'nav', 'form', 'a', 'span', 'head', 'input', 'main', 'body', 'meta', 'label', 'ol', 'br', 'h4', 'strong', 'picture', 'noscript', 'header', 'style', 'script', 'fieldset', 'em', 'article', 'p', 'h3', 'img', 'base', 'section'}\n"
+      "{'a', 'link', 'article', 'meta', 'section', 'base', 'form', 'title', 'noscript', 'label', 'fieldset', 'h1', 'footer', 'time', 'i', 'picture', 'input', 'ol', 'nav', 'br', 'strong', 'body', 'h3', 'script', 'main', 'ul', 'head', 'style', 'p', 'img', 'em', 'div', 'span', 'button', 'source', 'li', 'header', 'h2', 'h4', 'html'}\n"
      ]
     }
    ],
@@ -72,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,57 +218,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "AGENTE: MI NOMBRE ES ROXANNE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\n",
+      "AGENTE: MI NOMBRE ES ROXANNE. CONTESTARE A SUS PREGUNTAS ACERCA DEL WEB SCRAPING Y SUS ASUNTOS LEGALES.\n",
+      "Roxanne:> google es un buen ejemplo de web scraping.\n",
+      "Roxanne:> el scrapingno siempre es legal.\n",
+      "Roxanne:> los motores de búsqueda, como google, utilizan desde hace tiempo los denominados rastreadores web o crawlers, que exploran internet en busca de términos definidos por el usuario.\n",
+      "Roxanne:> No hay de que\n",
       "Roxanne:> Nos vemos pronto, !Gracias por su visita¡\n"
      ]
     }
    ],
    "source": [
     "flag = True\n",
+    "introduces = \"AGENTE: MI NOMBRE ES ROXANNE. CONTESTARE A SUS PREGUNTAS ACERCA DEL WEB SCRAPING Y SUS ASUNTOS LEGALES.\"\n",
     "\n",
-    "print(\"AGENTE: MI NOMBRE ES ROXANNE. CONTESTARE A SUS PREGUNTAS ACERCA DEL COVID Y LAS MEDIDAS DE SIGUIRDAD.\")\n",
+    "print(introduces)\n",
+    "speak(introduces)\n",
+    "\n",
     "while(flag == True):\n",
+    "\n",
     "    user_response = input()\n",
     "    user_response = user_response.lower() #convertimos a minuscula\n",
     "\n",
     "    if(user_response not in [\"salir\",\"chao\",\"adios\",\"bay\",\"exit\"]):\n",
+    "\n",
     "        if(user_response == 'gracias' or user_response == 'muchas gracias'): #se podria haber definido otra funcion de coincidencia\n",
     "            flag = True\n",
-    "            print(\"Roxanne:> No hay de que\")\n",
+    "            thanks_res = \"No hay de que\"\n",
+    "            print(\"Roxanne:> \"+ thanks_res)\n",
+    "            speak(thanks_res)\n",
     "        else:\n",
     "            if(saludos(user_response) != None): # si la palabra insertada por el usuario es un saludo (coincidencia manuales)\n",
-    "                print(\"Roxanne:> \"+saludos(user_response))\n",
+    "                greets = saludos(user_response) \n",
+    "                print(\"Roxanne:> \" + greets)\n",
+    "                speak(greets)\n",
+    "\n",
     "            else:#si la palabra insertada no es un saludo --> Corpus\n",
-    "                print(\"Roxanne:> \",end =\"*\")\n",
-    "                print(response(user_response),end=\"*\\n\")\n",
+    "                respond = response(user_response)\n",
+    "                print(\"Roxanne:> \" + respond )\n",
+    "                speak(respond)\n",
     "                sent_tokens.remove(user_response) # para eliminar del corpus la respues del usuario y volver a evaluar \n",
     "    else:\n",
     "        flag = False\n",
-    "        print(\"Roxanne:> Nos vemos pronto, !Gracias por su visita¡\")    "
+    "        print(\"Roxanne:> Nos vemos pronto, !Gracias por su visita¡\")\n",
+    "        speak(\"Nos vemos pronto, !Gracias por su visita¡\")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Los motores de búsqueda, como Google, utilizan desde hace tiempo los denominados rastreadores web o crawlers, que exploran Internet en busca de términos definidos por el usuario. Los rastreadores son tipos especiales de bots, que visitan una página web tras otra para generar asociaciones con términos de búsqueda y categorizarlos. El primer rastreador web se creó ya en 1993, cuando se presentó el primer motor de búsqueda: Jumpstation.\n\nEntre estas técnicas de rastreo se incluye el web scraping o webharvesting. Te explicamos cómo funciona, para qué se utiliza y cómo se puede bloquear en caso necesario.\n\nDurante el web scraping (del inglés scraping = arañar/raspar) se extraen y almacenan datos de páginas web para analizarlos o utilizarlos en otra parte. Por medio de este raspado web se almacenan diversos tipos de información: por ejemplo, datos de contacto, tales como direcciones de correo electrónico o números de teléfono, o también términos de búsqueda o URL. Estos se almacenan en bases de datos locales o tablas.\n\nCon el web scraping se leen textos de páginas web para obtener información y almacenarla, de forma comparable al proceso automático de copiado y pegado. En el caso de la búsqueda de imágenes, el proceso se denomina acertadamente image scraping.\n\nDentro del scraping hay diferentes modos de funcionamiento, aunque en general se diferencia entre el scraping automático y el manual. El scraping manual define el copiado y pegado manual de información y datos, como quien recorta y guarda artículos de periódico y solo se lleva a cabo si se desea encontrar y almacenar alguna información concreta. Es un proceso muy laborioso que raras veces se aplica a grandes cantidades de datos.\n\nEn el caso del scraping automático, se recurre a un software o un algoritmo que analiza diferentes páginas web para extraer información. Se utiliza software especializado según el tipo de página web y el contenido. Dentro del scraping automático, se diferencian varios modos de proceder:\n\nEn este tutorial te enseñamos qué hay que tener en cuenta para el web scraping con Python. Para recopilar los datos, puede integrarse el WebDriver de Selenium sin ningún problema.\n\nEl web scraping se utiliza para una gran variedad de tareas, por ejemplo, para recopilar datos de contacto o información especial con gran rapidez. En el ámbito profesional, el scraping se utiliza a menudo para obtener ventajas respecto a la competencia. De esta forma, por medio del harvesting de datos, una empresa puede examinar todos los productos de un competidor y compararlos con los propios. El web scraping también resulta valioso en relación con los datos financieros: es posible leer datos desde un sitio web externo, organizarlos en forma de tabla y después analizarlos y procesarlos.\n\nGoogle es un buen ejemplo de web scraping. El buscador utiliza esta tecnología para mostrar información meteorológica o comparaciones de precios de hoteles y vuelos. Muchos de los portales actuales de comparación de precios también utilizan el scraping para representar información de diferentes sitios web y proveedores.\n\nEl scrapingno siempre es legal. En primer lugar, los scrapers deben tener en cuenta los derechos de propiedad intelectual de los sitios web. El web scraping tiene consecuencias muy negativas para algunas tiendas online y proveedores, por ejemplo, si el posicionamiento de su página se ve afectado debido a los agregadores. No es raro, por lo tanto, que una empresa se querelle contra un portal de comparaciones para impedir el web scraping. En uno de estos casos, el Tribunal Superior Regional de Fráncfort dictaminó en 2009 que una compañía aérea debía permitir el scraping por parte de portales comparativos porque, al fin y al cabo, su información es de libre acceso. No obstante, la aerolínea tenía la posibilidad de recurrir a medidas técnicas para evitarlo.\n\nEl scraping es legal, por lo tanto, siempre y cuando los datos recabados estén disponibles libremente para terceros en la web. Para garantizar la legalidad del web scraping, hay que tener en consideración lo siguiente:\n\nAunque el scraping está permitido en muchos casos, puede utilizarse con fines destructivos o incluso ilegales. Por ejemplo, esta tecnología se utiliza a menudo para enviar spam. Los emisores pueden aprovecharla para, por ejemplo, acumular direcciones de correo electrónico y enviar mensajes de spam a estos destinatarios.\n\nPara bloquear el scraping, los operadores de sitios web pueden adoptar diferentes medidas. Por ejemplo, el archivo robots.txt se utiliza para bloquear bots de buscadores. Por lo tanto, el scraping automático también se evita por medio de bots de software. Asimismo, es posible bloquear direcciones IP de bots. Los datos de contacto e información personal se pueden ocultar de manera selectiva: los datos sensibles, tales como los números de teléfono, se pueden proporcionar en forma de imagen o como CSS, lo que dificulta el scraping de los datos. Además, existen numerosos proveedores de servicios antibotde pago que pueden establecer un firewall. Con Google Search Console también es posible configurar notificaciones para informar a los operadores de sitios web en caso de que sus datos se utilicen para scraping.\n\n\n        Con una cuota de mercado de más del 80 por ciento, PHP se convierte para muchos programadores en el lenguaje de programación por excelencia a la hora de crear contenidos web dinámicos. Independientemente de que se quiera crear una página web propia, gestionar un foro de Internet o una tienda online, a menudo el software utilizado para dichos fines suele basarse en PHP. Nuestro tutorial sobre PHP...\n    \n\n\n        Para mejorar el rendimiento al realizar consultas reiteradas en SQL y, al mismo tiempo, minimizar el riesgo de manipulación al acceder a la base de datos, se recurre a las llamadas sentencias preparadas o Estas plantillas existen para muchos lenguajes, entre ellos PHP. ¿Qué son exactamente las sentencias preparadas y cómo pueden usarse en la gestión de bases de datos? \n    \n\n\n        El método conocido como web scraping permite extraer información de páginas web de forma automática. Para llevarlo a cabo, el lenguaje Python resulta especialmente útil. Sigue leyendo para saber por qué Python es tan buena elección, qué riesgos legales conlleva este método y qué alternativas existen. También puedes utilizar nuestro tutorial de web scraping con Python para dar tus primeros pasos...\n    \n\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(Content)"
+    "# print(Content)"
    ]
   },
   {
