--- a/analisis_sintesis_voz/main.ipynb
+++ b/analisis_sintesis_voz/main.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,22 +88,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'terror'"
+       "[{'transcript': 'error error error', 'confidence': 0.59183896},\n",
+       " {'transcript': 'perro perro perro'},\n",
+       " {'transcript': 'perro perro'},\n",
+       " {'transcript': 'el rock el rock el rock'},\n",
+       " {'transcript': 'terror terror terror'}]"
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 26
     }
    ],
    "source": [
-    "r.recognize_google(audio, language='es', show_all=True)"
+    "res = r.recognize_google(audio, language='es', show_all=True)\n",
+    "res['alternative']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'error error error'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "res['alternative'][0]['transcript']"
    ]
   },
   {
